# wow-translate-win7-test

./: README.md
.github/workflows/: build-dll.yml  build.yml
Interface/AddOns/WoWTranslate/: WoWTranslate.lua  WoWTranslate.toc  WoWTranslate_API.lua  WoWTranslate_Cache.lua  WoWTranslate_Config.lua  WoWTranslate_Glossary.lua  WoWTranslate_Minimap.lua  WoWTranslate_OutGlossary.lua
Interface/AddOns/WoWTranslate_ManualSingle/: WoWTranslate.lua  WoWTranslate.toc  WoWTranslate_Config.lua  WoWTranslate_Config_ManualSingle.lua  WoWTranslate_ManualSingle.toc
dll/: CMakeLists.txt  build.bat
dll/include/: logging.h  lua_interface.h  translator_core.h  utils.h
dll/src/: dllmain.cpp  logging.cpp  lua_interface.cpp  translator_core.cpp  utils.cpp
scripts/: install-macos.sh
